# Operating-Systems-Course

./: README.md
course_project/: README.md
course_project/solution/: CMakeLists.txt  client.cpp  func.hpp  game_logic.hpp  run.sh  server.cpp  shared_memory.hpp
coursework/: README.md
lab1/: README.md  strace.txt
lab1/solution/: child.c  input.txt  makefile  parent.c
lab2/: README.md  strace.txt
lab2/solution/: README.md  makefile  merge_sort.c
lab3/: README.md  strace.txt
lab3/solution/: child.c  makefile  parent.c
lab4/: README.md  strace1.txt  strace2.txt
lab4/solution/: libgcf.h  libgcf_euclid.c  libgcf_naive.c  libsquare.h  libsquare_rectangle.c  libsquare_triangle.c  makefile  program1.c  program2.c
lab5-7/: README.md  strace.txt
lab5-7/example/: client.cpp  makefile  server.cpp
lab5-7/solution/: controller.cpp  makefile  worker.cpp
